# Pyx

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
examples/: ejemplo.aux  ejemplo.build.tex  ejemplo.tex  prueba_completa.aux  prueba_completa.build.tex  prueba_completa.tex  prueba_completa.toc  test_formato.aux  test_formato.build.tex  test_formato.tex  test_handcalcs.tex  test_render.tex  test_simbiosis.tex  test_visor.tex
js/: main.jsx  theme-init.js
js/compile/: compiler.js  latex-bridge.js  log-parser.js
js/core/: i18n.js  paths.js  platform.js  state.js
js/data/: latex-snippets.js  symbols.js
js/editor/: autocomplete.js  bookmarks.js  cell-runner.js  cells.js  commands.js  dynamic-keys.js  indent-guides.js  latex-fold.js  latex-highlight.js  latex-table.js  link-paths.js  py-ghost.js  py-lint.js  search-panel.js  setup.js  spellcheck.js
js/pdf/: annotate.js  preview.js
js/solid/: App.jsx
js/solid/components/: ConfigDialog.jsx  ContextMenu.jsx  DocumentTabs.jsx  EditorPane.jsx  FileTree.jsx  NewDocDialog.jsx  PreviewPane.jsx  SidePanel.jsx  StatusBar.jsx  (+3 more)
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: kernel.py
src-tauri/src/: kernel.rs  latex.rs  lib.rs  main.rs  pltx.rs
styles/: base.css  cells.css  config.css  editor.css  layout.css  ribbon.css  status-bar.css  styles.css  tabs.css  themes.css  titlebar.css
(+22 files in other folders)
