[package]
name = "calc"
version = "1.1.0"
description = "Editor LaTeX con celdas Python tipo Jupyter"
authors = ["Calc"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "calc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# .pltx container = ZIP (Word-style): source + build artifacts, minus the PDF.
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
